# ai-python-project

./: pyproject.toml
ai_python_drills.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
notebooks/: 01_data_exploration.ipynb
src/: greet.py
src/api/: client.py
src/data/: processor.py
src/models/: schemas.py
src/utils/: data_science.py
tests/: test_all.py  test_greet.py
