[project]
name = "ai-python-drills"
version = "0.1.0"
description = "AI Engineering Python Drills"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "pydantic>=2.5",
    "httpx>=0.25",
    "fastapi>=0.109",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "jupyterlab>=4.0",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.4",
    "mypy>=1.7",
    "ipython>=8.18",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"